feat: integrate checkout

--- a/app/globals.css
+++ b/app/globals.css
@@ -76,12 +76,12 @@ main {
 }
 
 /* For Webkit-based browsers (Chrome, Safari and Opera) */
-.overflow-x-auto::-webkit-scrollbar {
+.overflow-y-auto::-webkit-scrollbar {
   display: none;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
-.overflow-x-auto {
+.overflow-y-auto {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
